# corwar

./: CMakeLists.txt  Makefile  author  corewar  corwar.h  exit.c  f0  f1  f2  go.sh  main.c  op.h
.asm/: 01_live-empty_dir_value.s.asm.202127302027  01_live-no_arg.s.asm.202135302035  01_live-no_arg_but_spaces_and_comment.s.asm.202106301706  01_live-no_arg_comma_only.s.asm.202106301706  02_ld-dir_value_is_empty_reg_is_valid.s.asm.202104302004  02_ld-dir_value_is_pos_reg_is_valid_too_many_args.s.asm.202159302059  02_ld-dir_value_is_pos_reg_is_valid_too_many_commas.s.asm.202105302005  02_ld-ind_value_is_empty_reg_is_valid.s.asm.202105302005  02_ld-no_arg_but_spaces_and_comment.s.asm.202136302036  03_st-no_comma_between_args.s.asm.202127302027  03_st-too_many_args_only_registers.s.asm.202121071821  04_add-first_arg_is_not_a_register.s.asm.202127302027  04_add-too_many_args_only_registers.s.asm.202105302005  05_sub-first_arg_is_not_a_register.s.asm.202136302036  05_sub-no_arg_comma_only.s.asm.202128302028  05_sub-second_arg_is_invalid.s.asm.202136302036  05_sub-too_many_args_only_registers.s.asm.202128302028  06_and-last_arg_is_not_a_register.s.asm.202105302005  06_and-too_many_args_only_registers.s.asm.202107301707  07_or-last_arg_is_not_a_register.s.asm.202107301707  07_or-no_arg.s.asm.202101302101  07_or-too_many_args_only_registers.s.asm.202106302006  08_xor-last_arg_is_not_a_register.s.asm.202129302029  08_xor-too_many_args_only_registers.s.asm.202101302101  09_zjmp-too_many_args.s.asm.202138302038  10_ldi-last_arg_is_not_a_register.s.asm.202102302102  10_ldi-too_many_args_only_registers.s.asm.202107302007  11_sti-too_many_args_only_registers.s.asm.202138302038  12_fork-too_many_args.s.asm.202130302030  14_lldi-last_arg_is_not_a_register.s.asm.202103302103  14_lldi-too_many_args_only_registers.s.asm.202103302103  15_lfork-too_many_args.s.asm.202103302103  15_lfork-too_many_args_empty.s.asm.202139302039  16_aff-no_arg.s.asm.202103302103  16_aff-too_many_args.s.asm.202131302031  char_after_command.s.asm.202120071820  char_before_command.s.asm.202127302027  char_between_command.s.asm.202106301706  command_invalid.s.asm.202120071820  comment_without.s.asm.202159302059  (+20 more)
.leaks/: 01_live-comment_end_of_line.s.leak.202104302004  01_live-comment_end_of_line.s.leak.202106301706  01_live-comment_end_of_line.s.leak.202120071820  01_live-comment_end_of_line.s.leak.202122070922  01_live-comment_end_of_line.s.leak.202127302027  01_live-comment_end_of_line.s.leak.202135302035  01_live-comment_end_of_line.s.leak.202159302059  01_live-comment_end_of_line_no_space.s.leak.202104302004  01_live-comment_end_of_line_no_space.s.leak.202106301706  01_live-comment_end_of_line_no_space.s.leak.202120071820  01_live-comment_end_of_line_no_space.s.leak.202122070922  01_live-comment_end_of_line_no_space.s.leak.202127302027  01_live-comment_end_of_line_no_space.s.leak.202135302035  01_live-comment_end_of_line_no_space.s.leak.202159302059  01_live-comment_end_of_line_with_spaces.s.leak.202104302004  01_live-comment_end_of_line_with_spaces.s.leak.202106301706  01_live-comment_end_of_line_with_spaces.s.leak.202120071820  01_live-comment_end_of_line_with_spaces.s.leak.202122070922  01_live-comment_end_of_line_with_spaces.s.leak.202127302027  01_live-comment_end_of_line_with_spaces.s.leak.202135302035  01_live-comment_end_of_line_with_spaces.s.leak.202159302059  01_live-dir_value_is_big.s.leak.202104302004  01_live-dir_value_is_big.s.leak.202106301706  01_live-dir_value_is_big.s.leak.202120071820  01_live-dir_value_is_big.s.leak.202122070922  01_live-dir_value_is_big.s.leak.202127302027  01_live-dir_value_is_big.s.leak.202135302035  01_live-dir_value_is_big.s.leak.202159302059  01_live-dir_value_is_int_max.s.leak.202104302004  01_live-dir_value_is_int_max.s.leak.202106301706  01_live-dir_value_is_int_max.s.leak.202120071820  01_live-dir_value_is_int_max.s.leak.202122070922  01_live-dir_value_is_int_max.s.leak.202127302027  01_live-dir_value_is_int_max.s.leak.202135302035  01_live-dir_value_is_int_max.s.leak.202159302059  01_live-dir_value_is_int_min.s.leak.202104302004  01_live-dir_value_is_int_min.s.leak.202106301706  01_live-dir_value_is_int_min.s.leak.202120071820  01_live-dir_value_is_int_min.s.leak.202122070922  01_live-dir_value_is_int_min.s.leak.202127302027  (+1601 more)
asm/: Makefile  asm
asm/includes/: asm.h  asm_errors.h  asm_op.h  errors.h
asm/libft/: Makefile
champions/: Party.s  ld.s  live.s  st.s  uncnown_instruction.s  wrong_arg_number.s  wrong_character_in_label.s  zork_longname.s  zork_nocomment.s  zork_nolab.s
g_funk_champ/: and.s  champ1.s  check_fork.cor  check_fork.s
g_op/: g_add.c  g_aff.c  g_and.c  g_corewar_op.h  g_fork.c  g_game_in_cycle.c  g_game_logic.c  g_get_put_values.c  g_help_buffer.c  g_ld.c  g_ldi.c  g_lfork.c  g_live.c  g_lld.c  g_lldi.c  g_or.c  g_st.c  g_sti.c  g_sub.c  g_xor.c  g_zjmp.c
includes/: asm.h  asm_errors.h  asm_op.h  corwar.h  g_corewar_op.h  op.h
libft/: Makefile
libft/inc/: libft.h  vector.h
libft/src/: ft_atoi32.c  ft_atol.c  ft_memdel.c  init_free_vector.c  is_filename.c
src/asm/: add_token.c  asm_errors.c  asm_main.c  free.c  (+6 more)
testop/: 16_aff-reg_is_valid.cor
(+50 files in other folders)
