cmake_minimum_required(VERSION 3.15)
project(corwar C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_COMPILER clang)

include_directories(.)
include_directories(libft/inc)
set(SOURCE_CODE
        libft/inc/ft_printf.h
        libft/inc/get_next_line.h
        libft/inc/libft.h
        libft/inc/vector.h
        libft/src/ft_printf/ad_0_after0x.c
        libft/src/ft_printf/ad_0_aftersign.c
        libft/src/ft_printf/ad_0_aftersps.c
        libft/src/ft_printf/ad_fld_end.c
        libft/src/ft_printf/ad_fld_strt.c
        libft/src/ft_printf/analyze_format.c
        libft/src/ft_printf/count_af_dot.c
        libft/src/ft_printf/find_format.c
        libft/src/ft_printf/format_c.c
        libft/src/ft_printf/format_d.c
        libft/src/ft_printf/format_f.c
        libft/src/ft_printf/format_o.c
        libft/src/ft_printf/format_p.c
        libft/src/ft_printf/format_processing.c
        libft/src/ft_printf/format_s.c
        libft/src/ft_printf/format_u.c
        libft/src/ft_printf/format_x.c
        libft/src/ft_printf/format_xx.c
        libft/src/ft_printf/ft_big_itoa_base.c
        libft/src/ft_printf/ft_dtoa.c
        libft/src/ft_printf/ft_itoa_base.c
        libft/src/ft_printf/ft_itoa_long.c
        libft/src/ft_printf/ft_ldtoa.c
        libft/src/ft_printf/ft_printf.c
        libft/src/ft_printf/ft_strjoin_free.c
        libft/src/ft_printf/ft_strjoin_free2.c
        libft/src/ft_printf/ft_strrev.c
        libft/src/ft_printf/ft_strsub_free.c
        libft/src/ft_printf/ft_unsig_itoa_long.c
        libft/src/ft_printf/get_mods.c
        libft/src/ft_printf/help_analyze_format.c
        libft/src/ft_printf/help_func_for_f.c
        libft/src/ft_printf/inscrem_s.c
        libft/src/ft_printf/locate_chr_index.c
        libft/src/ft_printf/overlay_flags.c
        libft/src/ft_printf/prec_ftoi.c
        libft/src/ft_printf/strlen.c
        libft/src/ft_printf/work_flags_with_d.c
        libft/src/ft_printf/work_flags_with_f.c
        libft/src/ft_printf/work_flags_with_o.c
        libft/src/ft_printf/work_flags_with_p.c
        libft/src/ft_printf/work_flags_with_per.c
        libft/src/ft_printf/work_flags_with_s.c
        libft/src/ft_printf/work_flags_with_u.c
        libft/src/ft_printf/work_flags_with_x.c
        libft/src/ft_printf/work_with_f.c
        libft/src/ft_atoi.c
        libft/src/ft_bzero.c
        libft/src/ft_error.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isgraph.c
        libft/src/ft_islower.c
        libft/src/ft_isprint.c
        libft/src/ft_isspace.c
        libft/src/ft_isupper.c
        libft/src/ft_isxdigit.c
        libft/src/ft_itoa.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strndup.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/get_next_line.c
        libft/src/get_emplace_vector.c
        libft/src/init_free_vector.c
        libft/src/insert_sort_vector.c
        libft/src/push_pop_vector.c
        libft/src/ft_atol.c
        corwar.h
        exit.c
        g_op/g_add.c
        g_op/g_aff.c
        g_op/g_and.c
        g_op/g_fork.c
        g_op/g_ld.c
        g_op/g_ldi.c
        g_op/g_lfork.c
        g_op/g_live.c
        g_op/g_lld.c
        g_op/g_lldi.c
        g_op/g_or.c
        g_op/g_st.c
        g_op/g_sti.c
        g_op/g_sub.c
        g_op/g_xor.c
        g_op/g_zjmp.c
        op.h g_op/g_game_logic.c g_op/g_game_in_cycle.c g_op/g_help_buffer.c g_op/g_get_put_values.c)


add_executable(corwar ${SOURCE_CODE} main.c g_op/g_game_in_cycle.c g_op/g_help_buffer.c)